nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: kube-test-container
        image: bardiark03/kube_test:latest
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 8080       # Port that the service will expose
      targetPort: 8080  # Port that the container is listening on
      nodePort: 30000   # Node port (use a value between 30000 and 32767)
  type: NodePort
