ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
spec:
  ingressClassName: nginx
  rules:
    - host: ingress.example
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: jwt-auth-service
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: jwt-auth-service-backup
                port:
                  number: 8080
